--- a/04. Comma/240722 이주성/html/mypage_travelRecode.html
+++ b/04. Comma/240722 이주성/html/mypage_travelRecode.html
@@ -279,7 +279,7 @@
                         <div>
                             <div id="mp_add-post-button">
                             </div>
-                            <div class="mp_travel_recode_box">
+                            <div class="mp_travel_plan_box">
                                 <div class="mp_tr_checkbox-container">
                                     <label class="mp_popup_content_checkbox">
                                         <div>
@@ -291,10 +291,10 @@
                                         </div>
                                     </label>
                                 </div>
-                                <div>
-                                    <div class="mp_travel_recode_icons">
+                                <div id="mp_content_flexbox_right">
+                                    <div class="mp_travel_plan_icons">
                                         <input type="checkbox" class="item-checkbox" />
-                                        <div class="mp_travel_recode_icon">
+                                        <div class="mp_travel_plan_icon">
                                             <div>
                                                 <h4>제주</h4>
                                                 <p>8.11-8.12</p>
@@ -305,9 +305,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="mp_travel_recode_icons">
+                                    <div class="mp_travel_plan_icons">
                                         <input type="checkbox" class="item-checkbox" />
-                                        <div class="mp_travel_recode_icon">
+                                        <div class="mp_travel_plan_icon">
                                             <div>
                                                 <h4>양양</h4>
                                                 <p>8.24-8.25</p>
@@ -318,9 +318,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="mp_travel_recode_icons">
+                                    <div class="mp_travel_plan_icons">
                                         <input type="checkbox" class="item-checkbox" />
-                                        <div class="mp_travel_recode_icon">
+                                        <div class="mp_travel_plan_icon">
                                             <div>
                                                 <h4>강릉</h4>
                                                 <p>10.05-10.06</p>
@@ -331,9 +331,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="mp_travel_recode_icons">
+                                    <div class="mp_travel_plan_icons">
                                         <input type="checkbox" class="item-checkbox" />
-                                        <div class="mp_travel_recode_icon">
+                                        <div class="mp_travel_plan_icon">
                                             <div>
                                                 <h4>부산</h4>
                                                 <p>12.21-12.22</p>
