--- a/04. Comma/240722 이주성/html/mypage.html
+++ b/04. Comma/240722 이주성/html/mypage.html
@@ -264,19 +264,19 @@
                     <div id="mp_content_flexbox_right">
                         <div id="mp_header_text">
                             <div>
-                                <a href="">게시물</a><br />
-                                <a href="">11</a>
+                                <a class="mp_travelRecode_btn" href="">여행기록</a><br />
+                                <a class="mp_travelRecode_btn" href="">11</a>
                             </div>
                             <div>
-                                <a href="">여행기록</a><br />
-                                <a href="">3</a>
+                                <a class="mp_travelPlan_btn" href="">여행계획</a><br />
+                                <a class="mp_travelPlan_btn" href="">3</a>
                             </div>
                             <div>
-                                <a href="">예약내역</a><br />
-                                <a href="">1</a>
+                                <a class="mp_reservation_btn" href="">예약내역</a><br />
+                                <a class="mp_reservation_btn" href="">1</a>
                             </div>
                         </div>
-                        <div>
+                        <div id="mp_change_contents">
                             <div id="mp_add-post-button">
                                 <img src="../img/new_board_icon.svg" alt="게시물추가" />
                             </div>
