--- a/04. Comma/240805 김대휘/html/board-all-function.html
+++ b/04. Comma/240805 김대휘/html/board-all-function.html
@@ -74,7 +74,13 @@
                     </div>
                     <div class="modal-text">
                         <textarea name="title" id="title" readonly>제목 test</textarea>
-                        <textarea name="memo" id="memo" readonly>내용 test</textarea>
+                        <textarea name="memo" id="memo" readonly>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita vel omnis voluptas, voluptates voluptatum vitae pariatur? Labore maiores, quod est dignissimos eum consectetur voluptas exercitationem, iste consequatur quos totam excepturi!
+                        Reprehenderit possimus omnis doloribus distinctio totam quaerat blanditiis molestiae aliquam inventore? Vel ut animi quos accusantium cum, iusto eum cumque rem tempora, minima temporibus, fuga reprehenderit consectetur suscipit? Quisquam, debitis.
+                        Corporis dolorem, officia, eveniet tenetur quam perspiciatis nulla laborum amet non ut deserunt adipisci? Ex, quaerat eos, vero cum laborum, molestias hic asperiores in deserunt quod reiciendis possimus labore et?
+                        Velit eaque soluta assumenda non voluptates optio ipsam placeat, ducimus earum possimus nam ipsa dolorum unde tenetur nisi vitae nulla magnam facere ea dolores maxime. Sunt laboriosam ipsam dicta praesentium.
+                        Non deserunt expedita itaque, tempora cupiditate optio sint, nobis aperiam alias adipisci ipsa delectus dicta aliquid recusandae iste reiciendis. Mollitia itaque quis quidem modi eius minima ipsa soluta. Aliquam, doloribus.
+                        </textarea>
                     </div>
                     <div class="modal-text-line"></div>
                     <div class="modal-interaction">
@@ -149,6 +155,11 @@
                                 <img src="../img/Liked-Icon.svg" alt="좋아요">
                             </button>
                         </div>
+                    </div>
+                    <div class="comment-write-box">
+                        <img class="comment-writer-user" src="../img/Writer.svg" alt="writer-image">
+                        <input class="comment-write-input" type="text">
+                        <button class="comment-write-submit-button" type="submit">⬆</button>
                     </div>
                 </div>
             </div>
